# ClarityCV

./: .dockerignore  .gitignore  DELIVERABLES.md  DOCUMENTATION_INDEX.md  README.md  TESTING_VERIFICATION.md  docker-compose.yml  package-lock.json
.venv2/: pyvenv.cfg
Client/app/: globals.css
Client/app/frequency-domain/: page.tsx
Client/app/frequency-domain/low-high-pass/: page.tsx
Client/app/histogram/components/: HistogramTab.tsx
Client/app/spatial/components/: SpatialFilterTab.tsx
Client/components/: Header.tsx
Client/components/ui/: Slider.tsx
Client/contexts/: ImageContext.tsx
Client/lib/: imageProcessing.ts
backend/: CMakeLists.txt  Dockerfile  HOUGH_ADVANCED_GUIDE.md  HOUGH_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  PROCESSING_PIPELINE.md  hough_circle_detector.py  run.sh
backend/.cache/clangd/index/: ActiveContour.cpp.63DD39BEFBEEE6E6.idx  Base64.hpp.0646105DC5C003A6.idx  CornerDetector.cpp.A7A865E2343B78F7.idx  EdgeDetector.cpp.1D47E267AEA903EB.idx  FilterProcessor.cpp.98BDD2D5393CC61E.idx  FourierUtils.cpp.E0B6D8AEF0EFABCF.idx  FourierUtils.hpp.49DBF46E861DA85F.idx  FrequencyProcessor.cpp.CC58B73C38310DFB.idx  HarrisCorner.cpp.DDB96CD12540FDF0.idx  HistogramProcessor.cpp.739561BA4B05D0BE.idx  HoughProcessor.cpp.7FCF2EB6708D5A81.idx  HybridProcessor.cpp.5332BB152AB33996.idx  Image.hpp.276FFF6EC3B50AC1.idx  ImageUtils.cpp.450EF6D478958DB4.idx  ImageUtils.hpp.76D77ACBD5D2B5C1.idx  NoiseProcessor.cpp.63D0AB36B4FFA94F.idx  Router.cpp.41523C09AA1786CA.idx  Router.hpp.E5A07E6EDEA24AB6.idx  Server.cpp.D99D147D62DBAC8F.idx  Server.hpp.6229F243237DDD82.idx  ThresholdProcessor.cpp.676BC1B917D98262.idx  httplib.h.72DCFC975723FC4D.idx  json.hpp.A127F46E28DEF849.idx  main.cpp.EC3BB9924896F452.idx
backend/include/processing/: ActiveContour.hpp  CornerDetector.hpp  EdgeDetector.hpp  FeatureMatcher.hpp  FilterProcessor.hpp  FrequencyProcessor.hpp  HistogramProcessor.hpp  HoughProcessor.hpp  HybridProcessor.hpp  NoiseProcessor.hpp  SIFTProcessor.hpp  ThresholdProcessor.hpp  compile_commands.json
backend/include/processing/.cache/clangd/index/: ActiveContour.hpp.7F4F1E9F1FEFBCFF.idx  CornerDetector.hpp.878D2C316AD04B9B.idx  EdgeDetector.hpp.358ECBA7685F6591.idx  FilterProcessor.hpp.6DE8CAD9C7853858.idx  FrequencyProcessor.hpp.D130897A82D71D23.idx  HarrisCorner.hpp.D0BD4EC4959CA067.idx  HistogramProcessor.hpp.87F045A154AEE887.idx  HoughProcessor.hpp.90284ADA00B50183.idx  HybridProcessor.hpp.D2431382BB0FDDC6.idx  NoiseProcessor.hpp.1542EC726D3EF15B.idx  ThresholdProcessor.hpp.2B85A1CC0D791DBA.idx
backend/include/server/: Router.hpp  Server.hpp
backend/include/utils/: Base64.hpp  FourierUtils.hpp  Image.hpp  ImageUtils.hpp
backend/src/: main.cpp
backend/src/processing/: ActiveContour.cpp  CornerDetector.cpp  EdgeDetector.cpp  FeatureMatcher.cpp  FilterProcessor.cpp  FrequencyProcessor.cpp  HistogramProcessor.cpp  HoughProcessor.cpp  HybridProcessor.cpp  NoiseProcessor.cpp  SIFTProcessor.cpp  ThresholdProcessor.cpp
backend/src/server/: Router.cpp  Server.cpp
backend/src/utils/: FourierUtils.cpp  ImageUtils.cpp
face_recognition_service/: README.md  requirements.txt
face_recognition_service/api/: __init__.py  schemas.py  server.py
face_recognition_service/core/: __init__.py
face_recognition_service/tools/: __init__.py  demo.py  evaluate.py  inspect_model.py
fastapi_image_segmenter/: PROJECT_STRUCTURE.txt  README.md  config.py  demo_generate_outputs.py  main.py  requirements.txt  run_cli.py
fastapi_image_segmenter/.venv2/: pyvenv.cfg
fastapi_image_segmenter/algorithms/: segmentation.py  thresholding.py
fastapi_image_segmenter/app/: __init__.py  image_service.py  main.py  schemas.py
fastapi_image_segmenter/frontend_examples/: ImageSegmenter.jsx  api.js
fastapi_image_segmenter/utils/: image_io.py  palette.py
frontend/: Dockerfile  next.config.ts  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/active_contour/: page.tsx
frontend/app/active_contour/components/: ActionButtons.tsx  ActiveContourTab.tsx  ParametersPanel.tsx  (+1 more)
frontend/app/corner-detection/: page.tsx
frontend/app/face-recognition/: page.tsx
frontend/app/feature-matching/: page.tsx
frontend/app/frequency-domain/: layout.tsx
frontend/app/histogram/: page.tsx
frontend/app/hough_transform/: page.tsx
frontend/app/segmentaion/: layout.tsx  page.tsx
frontend/app/sift/: page.tsx
frontend/app/spatial/: page.tsx
frontend/components/: ClientLayout.tsx  ControlPanel.tsx  Header.tsx  ImageBox.tsx
frontend/components/ui/: Button.tsx  Select.tsx  Sidebar.tsx
frontend/contexts/: ImageContext.tsx
frontend/lib/: api.ts  appGroups.tsx  imageProcessing.ts
python_service/: .dockerignore  Dockerfile  README.md  requirements.txt
python_service/algorithms/: __init__.py  segmentation.py
python_service/api/: schemas.py  segment_service.py  server.py
python_service/core/: detector.py  pipeline.py  recognizer.py
python_service/tools/: __init__.py
python_service/utils/: __init__.py
task1/: package-lock.json  package.json
task1/app/: layout.tsx  page.tsx
task1/app/frequency-domain/: page.tsx
task1/app/histogram/: page.tsx
task1/components/: FrequencyFilterTab.tsx  Header.tsx  HistogramTab.tsx  HybridImageTab.tsx  ImageBox.tsx  SpatialFilterTab.tsx
(+37 files in other folders)
